{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 13,
  "lineage": "f5a40439-0b81-e72d-7195-0b736653914d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-06T22:44:39.846-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-06T22:44:40.259-08:00",
            "deny": [],
            "description": "Allow SSH from the internet to instances with tag=ssh",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc",
            "priority": 1000,
            "project": "project-3e800f45-77e7-454a-a2b",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251218",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/zones/asia-south1-a/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-3e800f45-77e7-454a-a2b/zones/asia-south1-a/instances/private-vm",
            "instance_id": "4834793741291339285",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "",
              "startup-script": "      #!/usr/bin/env bash\n      set -xe\n\n      # install nginx and prerequisites\n      apt-get update\n      apt-get install -y nginx curl jq tar\n      systemctl enable --now nginx\n\n      # create runner directory\n      RUN_DIR=/opt/actions-runner\n      mkdir -p \"$RUN_DIR\"\n      cd /opt\n\n      # fetch latest runner tarball for linux x64\n      ASSET_URL=$(curl -sS https://api.github.com/repos/actions/runner/releases/latest | jq -r '.assets[] | selec [...]
            },
            "metadata_fingerprint": "1FqfURL_E88=",
            "name": "private-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.16.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/regions/asia-south1/subnetworks/mumbai-subnet",
                "subnetwork_project": "project-3e800f45-77e7-454a-a2b"
              }
            ],
            "project": "project-3e800f45-77e7-454a-a2b",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/zones/asia-south1-a/instances/private-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private",
              "ssh"
            ],
            "tags_fingerprint": "tGxN_1E6Fec=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "startup-script",
                  "type": "string"
                }
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_network.default_vpc",
            "google_compute_subnetwork.mumbai_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Custom VPC for project",
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc",
            "mtu": 0,
            "name": "default-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "project-3e800f45-77e7-454a-a2b",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mumbai_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-06T22:44:41.548-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/project-3e800f45-77e7-454a-a2b/regions/asia-south1/subnetworks/mumbai-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "mumbai-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/global/networks/default-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-3e800f45-77e7-454a-a2b",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-3e800f45-77e7-454a-a2b/regions/asia-south1/subnetworks/mumbai-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.default_vpc"
          ]
        }
      ]
    }
  ]
}